# minilog

./: CMakeLists.txt  README.md
include/minilog/: config.h  log-levels.h  logger.h  properties.h  spin-mutex.h
src/: config.cc
test/: test-all.cc
